# pytest-codingagents

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest-codingagents-plan.md  sitemap.xml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  integration.yml  release.yml
contributing/: index.html
demo/: basic-report.html  index.html  instruction-testing-report.html  model-comparison-report.html
docs/: index.md
docs/contributing/: index.md
docs/demo/: basic-report.html  index.md  instruction-testing-report.html  model-comparison-report.html
docs/getting-started/: index.md  instruction-testing.md  model-comparison.md
docs/how-to/: ab-testing.md  aitest-integration.md  assertions.md  ci-cd.md  cli-tools.md  copilot-config.md  ide-personas.md  index.md  mcp-servers.md  optimize.md  skills.md  tool-control.md
docs/reference/: agent.md  api.md  configuration.md  result.md
getting-started/: index.html
getting-started/instruction-testing/: index.html
getting-started/model-comparison/: index.html
how-to/: index.html
how-to/ab-testing/: index.html
how-to/aitest-integration/: index.html
how-to/assertions/: index.html
how-to/ci-cd/: index.html
how-to/cli-tools/: index.html
how-to/copilot-config/: index.html
how-to/mcp-servers/: index.html
how-to/optimize/: index.html
how-to/skills/: index.html
how-to/tool-control/: index.html
reference/agent/: index.html
reference/api/: index.html
reference/configuration/: index.html
reference/result/: index.html
scripts/: run_all.py
search/: search_index.json
src/pytest_codingagents/: __init__.py  plugin.py
src/pytest_codingagents/copilot/: __init__.py  agent.py  agents.py  events.py  fixtures.py  optimizer.py  personas.py  result.py  runner.py
src/pytest_codingagents/prompts/: coding_agent_analysis.md
tests/: README.md  conftest.py  test_ab_run.py  test_basic.py  test_cli_tools.py  test_custom_agents.py  test_events.py  test_instructions.py  test_matrix.py  test_models.py  test_optimizer_integration.py  test_skills.py  test_subagents.py
tests/unit/: test_agent.py  test_agents.py  test_event_mapper.py  test_fixtures.py  test_optimizer.py  test_plugin.py  test_result.py
(+4 files in other folders)
