[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-codingagents"
version = "0.1.0"
description = "Pytest plugin for testing real coding agents via their SDK"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Stefan Brunner" }
]
keywords = ["pytest", "ai", "llm", "copilot", "coding-agents", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=9.0",
    "github-copilot-sdk>=0.1.23",
    "azure-identity>=1.25.2",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=1.3",
    "ruff>=0.14",
    "pyright>=1.1.408",
    "pre-commit>=4.5",
]
aitest = [
    "pytest-aitest>=0.2",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.7",
    "mkdocstrings[python]>=0.24",
    "pillow>=11.0",
    "cairosvg>=2.7",
]

[project.entry-points.pytest11]
codingagents = "pytest_codingagents.plugin"

[project.urls]
Homepage = "https://github.com/sbroenne/pytest-codingagents"
Repository = "https://github.com/sbroenne/pytest-codingagents"

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_codingagents"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402", "E501", "F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "copilot: marks tests as requiring GitHub Copilot SDK credentials",
]

[dependency-groups]
dev = [
    "pytest-codingagents[dev,aitest,docs]",
]
